<resources>
    <string name="app_name">Mobipug</string>
    <string name="Google_API_KEY">AIzaSyAhZQInvzvpf__o3zK67tbJ9j7eZ1d7kys</string>
    <string name="title1">Textview1</string>
    <string name="title2">Textview2</string>
    <string name="title3">Textview3</string>
    <string name="title4">Button1</string>
    <string name="title5">Button2</string>
    <string name="title6">Button3</string>
    <string name="text">text</string>
    <string-array name="vendormenu_list">

        <item>Home</item>
        <item>Products</item>
        <item>Offers</item>
        <item>Categories</item>
        <item>Sub Categories</item>
        <item>Generate Bill</item>
        <item>Contact Us</item>
        <item>About Us</item>
        <item>Privacy Policy</item>
        <item>Privacy Policy</item>
        <item>Log Out</item>

    </string-array>
    <string-array name="customermenu_list">

        <item>Home</item>
        <item>Products</item>
        <item>My Orders</item>
        <item>Profile</item>
        <item>Contact Us</item>
        <item>About Us</item>
        <item>Privacy Policy</item>
        <item>Privacy Policy</item>
        <item>Log Out</item>

    </string-array>
    <string name="four">4.5</string>
    <string name="arel">Aurelien Salomon</string>
    <string name="arel_mail">\@aureliensalomon</string>
    <string name="more_bnfits">More benefits please login</string>
    <string name="search">Search...</string>
    <string name="catgries">Categories</string>
    <string name="products">Products</string>
    <string name="show">Show more</string>
    <string name="poplr_keywords">Popular keywords</string>
    <string name="srtrs">Starters</string>
    <string name="mng">Manage</string>
    <string name="add">Add</string>
    <string name="req">Request</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="mobile">Mobile</string>
    <string name="confrmpassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="custmr">Customer</string>
    <string name="vendor">Vendor</string>
    <string name="writeareview">Write your review here...</string>
    <string name="cntinue">CONTINUE</string>
    <string name="cnct_fb">Connect with facebook</string>
    <string name="hve_acunt_rgstr">Have an account? Register</string>
    <string name="trms_cndtns">By continuing, you agree to our\nTerms &amp; Conditions</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="email">Email</string>
    <string name="available">Available</string>
    <string name="outofstock">Out of Stock</string>
    <string name="paswrd">Password</string>
    <string name="frgtpswd">FORGOT PASSWORD</string>
    <string name="category_lst">Category List</string>
    <string name="wishlist">Wish List</string>
    <string name="mywishlist">My Wishlist</string>
    <string name="subcategory_lst">Sub Category List</string>
    <string name="manage_odr">MANAGE ORDER</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="profile">Profile</string>
    <string name="ofrs_lst">Offers List</string>
    <string name="offers">Offers</string>
    <string name="ad_ofr">Add Offer</string>
    <string name="manage">Manage</string>
    <string name="srch_dots">Search...</string>
    <string name="filtrs">Filters</string>
    <string name="prmocde">Promocode :</string>
    <string name="strtdate">Start Date :</string>
    <string name="enddate">End Date :</string>
    <string name="no">Order ID : </string>
    <string name="seclt_catgry">Please Select Category</string>
    <string name="seclt_name">Please Enter Name</string>
    <string name="productrvw">Please Enter Review about product</string>
    <string name="seclt_sub_catgry">Please Select Sub Category</string>
    <string name="seclt_product">Please Select Product</string>
    <string name="seclt_discounttype">Please Select Discount type</string>
    <string name="seclt_ofrenddate">Please Select Offer End date</string>
    <string name="seclt_ofrstartdate">Please Select Offer Start date</string>
    <string name="seclt_oframount">Please Enter Offer amount</string>
    <string name="secltsub_catgry">Select Sub Category</string>
    <string name="srch_prdct">Search Product Name</string>
    <string name="dscunt_type">Discount Type</string>
    <string name="ofrstatus_type">Public/Private</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="disply_strtdate">10-10-2018</string>
    <string name="disply_enddate">18-10-2018</string>
    <string name="srch">Search</string>
    <string name="sprtshoe">Sport shoes</string>
    <string name="prce_dolars">$1,450.00</string>
    <string name="dolars_rate">$999.00</string>
    <string name="dscunt_ngtve">( -50% )</string>
    <string name="ratng_cunt">( 40 )</string>
    <string name="ofrtype">Offer Type</string>
    <string name="publc">Public</string>
    <string name="prvate">Private</string>
    <string name="promo_code">Promo Code</string>
    <string name="dscunt">Discount</string>
    <string name="save">SAVE</string>
    <string name="submit">Submit</string>
    <string name="ofr_dscrptn">Offer Description</string>
    <string name="ofr_dscrptnn"></string>
    <string name="offer_list">Offers List</string>
    <string name="add_offer">Add Offer</string>
    <string name="edit_offer">Edit Offer</string>
    <string name="manage_offer">Manage Offers</string>
    <string name="bill_txtvw">Bill History</string>
    <string name="bill_today_txtvw">TODAY</string>
    <string name="bill_blood_txtvw">Blood Test</string>
    <string name="bill_dt_mn_yr">July 18,2017 14:02 PM</string>
    <string name="bill_prvs_txtvw">PREVIOUS LAB RESULTS</string>
    <string name="bill_rcd">Add a lab result record</string>
    <string name="manageproducts">Manage Products</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="product_list">Products List</string>
    <string name="sel_category">Please Select Category</string>
    <string name="nosubctgres">Sub Categories not available</string>
    <string name="noproducts">Products not available</string>
    <string name="sel_subcategory">Please Select Sub Category</string>
    <string name="product_name">Product Name</string>
    <string name="product_descr">Product Description</string>
    <string name="product_descrempty"></string>
    <string name="product_details">Product Details</string>
    <string name="product_imgs">Product Images</string>
    <string name="billimage">Bill Image</string>
    <string name="catimage">Category Image</string>
    <string name="catsubcatimage">Category &amp; Sub Category Images</string>
    <string name="product_pick">Pick From</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="stock">Stock</string>
    <string name="amount">Amount</string>
    <string name="pric">Price</string>
    <string name="length">Select</string>
    <string name="enterval">Enter Value</string>
    <string name="inches">Unit</string>
    <string name="ivokes">Ivolks Wireless Charger Cordless\nCellPhone Rapid Charger</string>
    <string name="three_ten">$310.00</string>
    <string name="nine_nine">$999.00</string>
    <string name="fifty">( -50 )</string>
    <string name="fourty">( 40 )</string>
    <string name="addtocart">ADD TO CART</string>
    <string name="prdct">Product details</string>
    <string name="are">Are you tired of slow, inefficient charging with too many wires that get tangled with each other?</string>
    <string name="if_u">If you are, we have just the solution for you!</string>
    <string name="combng">Combining super-fasr charging and wireless</string>
    <string name="vw_detls">VIEW DETAILS</string>
    <string name="addrvw">Add Review</string>
    <string name="ratinggiven">0 out of 5</string>
    <string name="rvw_nd_cmnts">Reviews &amp; Comments</string>
    <string name="three_zero">3.0 </string>
    <string name="of_five">of 5 (250 reviews)</string>
    <string name="ofr_details">Offer Details</string>
    <string name="two_five">(250 reviews)</string>
    <string name="five_s">5 stars</string>
    <string name="four_s">4 stars</string>
    <string name="three_s">3 stars</string>
    <string name="two_s">2 stars</string>
    <string name="one_s">1 stars</string>
    <string name="rvws">Reviews</string>
    <string name="cmnts">Comments</string>
    <string name="seven_t">72</string>
    <string name="three_f">34</string>
    <string name="two_t">22</string>
    <string name="one_o">11</string>
    <string name="eight">08</string>
    <string name="wrte_a">WRITE A REVIEW NOW</string>
    <string name="gud_p">Good product, good cameras !</string>
    <string name="fifteen_m">15 mins ago</string>
    <string name="by_suuny">By Sunny Vo</string>
    <string name="no_one">No-one gets iron - clad guarantee of success. Certainly, factors like opportunity, luck and timing are important, But the backbone
                          of success is usually found in old - fashioned, basic concepts like hard work, determination, good planning and perseverance.</string>
    <string name="see_all">SEE ALL REVIEWS</string>
    <string name="generate">Generate Bill</string>
    <string name="enteramnt">Enter Amount</string>
    <string name="uploadimage">Upload Image</string>
    <string name="searchproduct">Search Product</string>
    <string name="currentorders">Current Orders</string>
    <string name="pastorders">Past Orders</string>
    <string name="orders">Orders List</string>
    <string name="scanqrcode">QRCode</string>
    <string name="catgry">Category added successfully once approve\nyou can view in category list</string>
    <string name="opps">Opps! Something went wrong please\ncontact admin through support</string>
    <string name="deleteofrtxt">Do you want to delete this Offer?</string>
    <string name="deleteproducttxt">Do you want to delete this Product?</string>
    <string name="deletectgrytxt">Do you want to delete this Category?</string>
    <string name="deletesubctgrytxt">Do you want to delete this Sub Category?</string>
    <string name="deletedofrtxt">Selected Offer has been deleted successfully</string>
    <string name="deletedproducttxt">Selected Product has been deleted successfully</string>
    <string name="deletedctgrytxt">Selected Category has been deleted successfully</string>
    <string name="deletedsubctgrytxt">Selected Sub Category has been deleted successfully</string>
    <string name="activatectgrytxt">Do you want to Activate this Category?</string>
    <string name="activatesubctgrytxt">Do you want to Activate this Sub Category?</string>
    <string name="activateproducttxt">Do you want to Activate this Product?</string>
    <string name="activateofrtxt">Do you want to Activate this Offer?</string>
    <string name="confirmtxt">Do you want to Place this order?</string>
    <string name="activatedctgrytxt">Selected Category has been Activated successfully.</string>
    <string name="activatedsubctgrytxt">Selected Sub Category has been Activated successfully.</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="telephone">Telephone *</string>
    <string name="fax">Fax *</string>
    <string name="email_mndtry">Email *</string>
    <string name="bussinessaddress">Business Address *</string>
    <string name="mapaddress">Map Address</string>
    <string name="pincode_mndtry">Pincode *</string>
    <string name="website">Website</string>
    <string name="takepic">Take Photo</string>
    <string name="chsefromglry">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="select">Pick Image</string>
</resources>