<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"

            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/vreg_latitude_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.o3sa.mobipugapp.customfonts.CustomEditText
                    android:id="@+id/vreg_latitude_edtx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:background="@null"
                    android:editable="false"
                    android:singleLine="true"
                    android:paddingTop="10dp"
                    android:hint="@string/latitude"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey_clr"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="@color/ash_thik"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/vreg_longitude_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.o3sa.mobipugapp.customfonts.CustomEditText
                    android:id="@+id/vreg_longitude_edtx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:background="@null"
                    android:editable="false"
                    android:singleLine="true"
                    android:paddingTop="10dp"
                    android:hint="@string/longitude"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey_clr"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="@color/ash_thik"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/vreg_telephne_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.o3sa.mobipugapp.customfonts.CustomEditText
                    android:id="@+id/vreg_telephne_edtx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:background="@null"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:paddingTop="10dp"
                    android:hint="@string/telephone"
                    android:textColor="@color/black"
                    android:textColorHint="@color/ash_clr"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="@color/ash_thik"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/vreg_fax_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.o3sa.mobipugapp.customfonts.CustomEditText
                    android:id="@+id/vreg_fax_edtx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:background="@null"
                    android:singleLine="true"
                    android:paddingTop="10dp"
                    android:hint="@string/fax"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey_clr"/>


            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="@color/ash_thik"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/vreg_email_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15">

                    <com.o3sa.mobipugapp.customfonts.CustomEditText
                        android:id="@+id/vreg_email_edtx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:singleLine="true"
                        android:paddingTop="10dp"
                        android:hint="@string/email_mndtry"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/dark_grey_clr"/>

                    <!-- <include
                         android:id="@+id/vreg_pancrd_edtx"
                         layout="@layout/customedittextview"/>-->

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="0.85"
                    android:visibility="gone"
                    android:gravity="bottom|center"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/vreg_email_img"
                        layout="@layout/customimageview"/>

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="@color/ash_thik"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/vreg_bus_adres_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.o3sa.mobipugapp.customfonts.CustomEditText
                    android:id="@+id/vreg_bus_adres_edtx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left|top"
                    android:textSize="15dp"
                    android:background="@null"
                    android:lines="2"
                    android:paddingTop="10dp"
                    android:hint="@string/bussinessaddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey_clr"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="@color/ash_thik"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/vreg_map_adres_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.o3sa.mobipugapp.customfonts.CustomEditText
                    android:id="@+id/vreg_map_adres_edtx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left|top"
                    android:lines="2"
                    android:textSize="15dp"
                    android:background="@null"
                    android:paddingTop="10dp"
                    android:hint="@string/mapaddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey_clr"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="@color/ash_thik"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/vreg_pincde_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.o3sa.mobipugapp.customfonts.CustomEditText
                    android:id="@+id/vreg_pincde_edtx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:background="@null"
                    android:inputType="number"
                    android:singleLine="true"
                    android:paddingTop="10dp"
                    android:hint="@string/pincode_mndtry"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey_clr"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="@color/ash_thik"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/vreg_website_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.o3sa.mobipugapp.customfonts.CustomEditText
                    android:id="@+id/vreg_website_edtx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:background="@null"
                    android:singleLine="true"
                    android:paddingTop="10dp"
                    android:hint="@string/website"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey_clr"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="@color/ash_thik"/>

            <include
                android:id="@+id/vreg_sbmt_btn"
                layout="@layout/custombutton"/>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>